# SEOMCP

./: .gitignore  AGENTS.md  README.md  Readme.md  pyproject.toml  requirements.txt
data/json/: analyze-a-pickleball-christmas.json  analyze-object-storage.json  analyze-pickleball-brackets.json  analyze-pickleball-lesson.json  analyze-pickleball-paddles.json  analyze-pickleball-rules.json  analyze-the-fort-pickleball.json  brief-a-pickleball-christmas.json  brief-object-storage.json  brief-pickleball-brackets.json  brief-pickleball-lesson.json  brief-pickleball-paddles.json  brief-pickleball-rules.json  brief-the-fort-pickleball.json  guidance-object-storage.json  guidance-the-fort-pickleball.json  optimize-a-pickleball-christmas.json  optimize-object-storage.json  optimize-pickleball-brackets.json  optimize-pickleball-lesson.json  optimize-pickleball-paddles.json  optimize-pickleball-rules.json  optimize-the-fort-pickleball.json  (+10 more)
examples/: a-pickleball-christmas-draft.md  a-pickleball-christmas-guide.md  a-pickleball-christmas.md  draft.md  pickleball-lesson.md  pickleball-paddles.md  query.txt  revised-a-pickleball-christmas.md  revised-pickleball-brackets.md  revised-pickleball-paddles.md  revised-the-fort-pickleball.md  sample_output_report.json  the-fort-pickleball.md  working-object-storage.md
src/: analyze.py  brief.py  browser_session.py  content_qa.py  draft.py  extract.py  feedback.py  fetch.py  guidance.py  main.py  markdown_doc.py  mcp_server.py  mcp_stdio_server.py  models.py  rewrite.py  score.py  serp.py  source_filter.py  utils.py  yourtextguru.py
