[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-writer-skill"
version = "0.1.0"
description = "Local SEO guidance and Hugo content QA tools exposed through CLI and MCP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.9.0",
  "lxml_html_clean>=0.2.0",
  "scikit-learn>=1.5.0",
  "nltk>=3.9",
  "mcp>=1.0.0",
  "playwright>=1.45.0",
  "PyYAML>=6.0",
  "tomli>=2.0",
  "tomli-w>=1.0",
]

[project.scripts]
seo-writer = "src.main:app"
seo-writer-mcp = "src.mcp_stdio_server:main"
seo-writer-json-tools = "src.mcp_server:serve"

[tool.setuptools.packages.find]
include = ["src*"]
